# axiomlang

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  VISION.md  project.bootstrap.yaml
stage1/: Cargo.toml
stage1/agent-autonomy/: benchmark-v0.json  readiness-baseline-v0.json
stage1/benchmarks/: cranelift-hello-baseline.json  stage1-baseline.json  stage1-build-baseline.json
stage1/benchmarks/baselines/: axiomc-bench-v1.json  stage1-build-median.json
stage1/compiler-contracts/schemas/: axiom.compiler.command_lsp.v1.schema.json  axiom.compiler.diagnostics_syntax.v1.schema.json  axiom.compiler.hir_ownership_capability.v1.schema.json  axiom.compiler.mir_backend.v1.schema.json  axiom.compiler.stdlib_catalog.v1.schema.json  axiom.provider-abi.v1.schema.json  axiom.runtime_lifecycle.v1.schema.json  axiom.semantic_mir.v1.schema.json  axiom.stage1.command.schema.json
stage1/compiler-contracts/snapshots/: build.json  capability-ledger.json  caps.json  check.json  command-lsp.json  debug-map.json  diagnostics-syntax.json  doc-md.md  docs-v1-multi-package.json  hir-ownership-capability.json  lsp-v1-transcript.json  mir-backend.json  mutation-report.json  provider-abi-v1.json  run.json  runtime-lifecycle-v1.json  semantic-mir-v1.json  (+2 more)
stage1/conformance/: README.md  axiom.toml
stage1/quality/: crap-threshold-proposal.json
stage1/runtime-abi/: direct-native-v0-evidence-tests.json  direct-native-v0.json
stage1/schemas/: axiom-agent-task-spec-v0.schema.json  axiom-agent-task-v0.schema.json  axiom-artifacts-v0.schema.json  axiom-benchmark-baseline-v1.schema.json  axiom-build-lowering-evidence-v1.schema.json  axiom-capability-ledger-v1.schema.json  axiom-compatibility-report-v1.schema.json  axiom-decision-record-v0.schema.json  axiom-doc-v0.schema.json  axiom-effects-v0.schema.json  axiom-evidence-v0.schema.json  axiom-execution-policy-v0.schema.json  axiom-execution-transaction-v0.schema.json  axiom-executor-report-v0.schema.json  axiom-executor-request-v0.schema.json  axiom-executor-resume-v0.schema.json  axiom-format-edit-v1.schema.json  axiom-inspect-v0.schema.json  axiom-intent-ir-v0.schema.json  axiom-production-language-readiness-v1.schema.json  axiom-provenance-v0.schema.json  axiom-public-contract-v1.schema.json  axiom-repair-v0.schema.json  axiom-selfhost-snapshot-manifest-v0.schema.json  axiom-semantic-diff-v0.schema.json  axiom-semantic-graph-v0.schema.json  axiom-target-v0.schema.json  axiom-toolchain-qualification-v0.schema.json  axiom-trace-v0.schema.json  axiom-verification-plan-v0.schema.json  axiom-verification-results-v0.schema.json  axiom-verification-verdict-v0.schema.json  axiom-verify-v0.schema.json  axiom.docs.v1.schema.json  axiom.lsp.v1.schema.json  axiom.stage1.v1.schema.json  axiom.toml.schema.json
stage1/snapshots/: manifest.json
stage1/supply-chain/: config.toml
(+964 files in other folders)
