[workspace]
members = ["crates/axiom-lsp", "crates/axiomc", "crates/axiomc-backend-cranelift"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
cranelift-codegen = "0.132.0"
cranelift-frontend = "0.132.0"
cranelift-module = "0.132.0"
cranelift-native = "0.132.0"
cranelift-object = "0.132.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
target-lexicon = "0.13.5"
tempfile = "3.23.0"
toml = "0.9.8"
which = "8.0.2"
jsonschema = "0.33.0"
libc = "0.2.178"
