[package]
name = "axiomc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
jsonschema.workspace = true
which.workspace = true
