[package]
name = "axiomc"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
run-native-tests = []

[dependencies]
axiomc-backend-cranelift = { path = "../axiomc-backend-cranelift" }
anyhow.workspace = true
clap.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tempfile.workspace = true

[dev-dependencies]
jsonschema.workspace = true
which.workspace = true
